--- a/Diplom_popitka1/Views/Home/About_company.cshtml
+++ b/Diplom_popitka1/Views/Home/About_company.cshtml
@@ -83,7 +83,7 @@
         <img src="https://atvexpert.ru/upload/iblock/78d/vpg6yql4di25jy6a6xjk3angsw2dxpre.jpg" alt="Эндуро-мотоцикл" class="image">
         <div class="text">Сервисный центр SLOT по ремонту эндуро в Казани</div>
         <div class="button">
-                <button class="btn1">Подать заявку</button>
+            <button class="btn1" onclick="location.href = '@Url.Action("AddRequest", "Client")'">Подать заявку</button>
                 <button class="btn2">Услуги и цены</button>
         </div>
       </div>
