--- a/Diplom_popitka1/Views/Home/AuthorizationWindow.cshtml
+++ b/Diplom_popitka1/Views/Home/AuthorizationWindow.cshtml
@@ -2,6 +2,7 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Layout = null;
 }
 
 <form class="AddPac" method="post" action="@Url.Action("AuthorizationWindow","Home")">
