--- a/Diplom_popitka1/Views/Shared/_Layout.cshtml
+++ b/Diplom_popitka1/Views/Shared/_Layout.cshtml
@@ -6,57 +6,76 @@
     <title>@ViewData["Title"] - Diplom_popitka1</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+  
     <link rel="stylesheet" href="~/Diplom_popitka1.styles.css" asp-append-version="true" />
 </head>
 <body>
+     
     @if (ViewContext.RouteData.Values["action"].ToString() != "Index")
     {
-        <header id="header_main">
-            <table>
-                <tr>
-                    <td>
-                        <img style="margin-left:40px;margin-right:40px;" height="160" src="/images/logo.jpg" />
-                    </td>
+        @if (ViewContext.RouteData.Values["controller"].ToString() != "Mechanic")
+        {
+           
+                <header id="header_main">
+                    <table>
+                        <tr>
+                            <td>
+                                <img style="margin-left:40px;margin-right:40px;" height="160" src="/images/logo.jpg" />
+                            </td>
 
-                    <td>
-                        <table style="width:100%;padding: 10px;">
-                            <tr>
-                                <td style="text-align:center;padding: 10px;">
-                                    <p style="color:#fff; font-size:20px;">Режим работы:</p>
-                                </td>
-                                <td>
-                                    <p style="color:#fff; font-size:20px;">Пн-Пт с 10:00 до 19:00</p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="text-align:center;">
-                                    <p style="color:#fff; font-size:20px;">Телефон:</p>
-                                </td>
-                                <td>
-                                    <p style="color:#fff; font-size:20px;">+7(900)000-00-00</p>
-                                </td>
-                            </tr>
+                            <td>
+                                <table style="width:100%;padding: 10px;">
+                                    <tr>
+                                        <td style="text-align:center;padding: 10px;">
+                                            <p style="color:#fff; font-size:20px;">Режим работы:</p>
+                                        </td>
+                                        <td>
+                                            <p style="color:#fff; font-size:20px;">Пн-Пт с 10:00 до 19:00</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="text-align:center;">
+                                            <p style="color:#fff; font-size:20px;">Телефон:</p>
+                                        </td>
+                                        <td>
+                                            <p style="color:#fff; font-size:20px;">+7(900)000-00-00</p>
+                                        </td>
+                                    </tr>
 
-                        </table>
+                                </table>
 
-                    </td>
-                    <td style="text-align:center;">
-                        @if (ViewContext.RouteData.Values["action"].ToString() != "About_company")
-                        {
-                            <button type="button" class="btn btn-primar" onclick="location.href = '@Url.Action("AddRequest", "Client")'">Подать заявку</button>
-                        }
-                    </td>
-            </tr>
-        </table>
-      
-        <ul id="navbar">
-            <li><a href="@Url.Action("About_company", "Home")">Главная</a></li>
-            <li><a href="@Url.Action("Index", "Home")">Аккаунт</a></li>
-           @* <li><a href="@Url.Action("Requarments", "Home")">Заявки</a></li>*@
-            @*<li><a href="@Url.Action("AddMoto", "Home")">Аккаунт+</a></li>*@
-        </ul>
-       
-    </header>
+                            </td>
+                            <td style="text-align:center;">
+                                @if (ViewContext.RouteData.Values["action"].ToString() != "About_company")
+                                {
+                                    <button type="button" class="btn btn-primar" onclick="location.href = '@Url.Action("AddRequest", "Client")'">Подать заявку</button>
+                                }
+                            </td>
+                        </tr>
+                    </table>
+
+                    <ul id="navbar">
+                        <li><a href="@Url.Action("About_company", "Home")">Главная</a></li>
+                    @*@using Newtonsoft.Json;
+                    @{
+                        var loginClient = Context.Session.GetString("ClientLogin") != null
+                    ? JsonConvert.DeserializeObject<Clients>(Context.Session.GetString("ClientLogin"))
+                    : null;
+                        var mots = ViewData["Mots"] as List<MotorcyclesToClient>;
+                    }
+                    @if (loginClient != null)
+                    {
+                        <li><a href="@Url.Action("AccountClient", "Client", new { mots = JsonConvert.SerializeObject(mots) })">Аккаунт</a></li>
+                    }*@
+                    <li><a href="@Url.Action("Index", "Home")">Аккаунт</a></li>
+                        @* <li><a href="@Url.Action("Requarments", "Home")">Заявки</a></li>*@
+                        @*<li><a href="@Url.Action("AddMoto", "Home")">Аккаунт+</a></li>*@
+                    </ul>
+
+                </header>
+            }
+
+        
     }
         <main role="main" >
             @RenderBody()
