--- a/Diplom_popitka1/Views/Home/AuthorizationWindow.cshtml
+++ b/Diplom_popitka1/Views/Home/AuthorizationWindow.cshtml
@@ -4,7 +4,7 @@
 @{
     Layout = null;
 }
-
+<label name="lov" id="lov">@ViewBag.love</label>
 <form class="AddPac" method="post" action="@Url.Action("AuthorizationWindow","Home")">
 
     <table class="tab" height="130">
