попытки оформить заявки у механика

--- a/Diplom_popitka1/Views/Client/HistoryRequests.cshtml
+++ b/Diplom_popitka1/Views/Client/HistoryRequests.cshtml
@@ -53,7 +53,7 @@
     <div class="containerpart">
         <div class="part">
             <label class="labelWhite">Заявка от @request.DateRequest</label>
-            <button class="button">Оставить отзыв</button>
+            <button class="button">Связь с механиком</button>
         </div>
            
             <label class="middle-text">@request.nameMotoCl</label>
