--- a/Diplom_popitka1/Views/Client/AccountClient.cshtml
+++ b/Diplom_popitka1/Views/Client/AccountClient.cshtml
@@ -5,7 +5,12 @@
 @{
     ViewData["Title"] = "Акаунт";
 }
+@*@using Newtonsoft.Json
+@{
+    var serializedMyMoto = Context.Session.GetString("MyMotorcycles");
+    var motoList = serializedMyMoto != null ? JsonConvert.DeserializeObject<List<MotorcyclesToClient>>(serializedMyMoto) : null;
 
+}*@
 <h1 class="underline">@ViewBag.name</h1>
 <p><strong style="margin-left:20px;">@ViewBag.tel</strong></p>
 
