--- a/Diplom_popitka1/Views/Shared/_Layout.cshtml
+++ b/Diplom_popitka1/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
                 </table>
 
                 <ul id="navbar">
-                    <li><a href="@Url.Action("NewRequests", "Mechanic")">Заявки</a></li>
+                    <li><a href="@Url.Action("MyRequests", "Mechanic")">Заявки</a></li>
                     <li><a href="@Url.Action("MessageMechanic", "Mechanic")">Сообщения</a></li>
                     <li><a href="@Url.Action("AccountMechanic", "Mechanic")">Аккаунт</a></li>
                 </ul>
