--- a/Diplom_popitka1/Views/Mechanic/AccountMechanic.cshtml
+++ b/Diplom_popitka1/Views/Mechanic/AccountMechanic.cshtml
@@ -43,6 +43,109 @@ input[type="radio"] {
         text-underline-offset: 10px;
         margin: 20px;
     }
+
+    /*для календаря*/
+    /*.group:after {
+        content: "";
+        display: table;
+        clear: both;
+    }*/
+
+   /* imgAccMech {
+        max-width: 100%;
+        height: auto;
+        vertical-align: baseline;
+    }*/
+
+    a {
+        text-decoration: none;
+    }
+
+    .calendar-wrapper {
+        width: 360px;
+        margin: 3em auto;
+        padding: 2em;
+        border: 1px solid #dcdcff;
+        border-radius: 5px;
+        background: #fff;
+    }
+
+    .calendar-table {
+        clear: both;
+        width: 100%;
+        border: 1px solid #dcdcff;
+        border-radius: 3px;
+        border-collapse: collapse;
+        color: #444;
+    }
+
+    .calendar-td {
+        height: 48px;
+        text-align: center;
+        vertical-align: middle;
+        border-right: 1px solid #dcdcff;
+        border-top: 1px solid #dcdcff;
+        width: 14.28571429%;
+    }
+
+    td.not-current {
+            color: #c0c0c0;
+        }
+
+    td.today {
+            font-weight: 700;
+            color: #28283b;
+            font-size: 1.5em;
+        }
+
+    thead td {
+        border: none;
+        color: #28283b;
+        text-transform: uppercase;
+        font-size: 1.5em;
+    }
+
+    #btnPrev {
+        float: left;
+        margin-bottom: 20px;
+    }
+
+        #btnPrev:before {
+            content: '\f104';
+            font-family: FontAwesome;
+            padding-right: 4px;
+        }
+
+    #btnNext {
+        float: right;
+        margin-bottom: 20px;
+    }
+
+        #btnNext:after {
+            content: '\f105';
+            font-family: FontAwesome;
+            padding-left: 4px;
+        }
+
+    #btnPrev,
+    #btnNext {
+        background: transparent;
+        border: none;
+        outline: none;
+        font-size: 1em;
+        color: #c0c0c0;
+        cursor: pointer;
+        font-family: sans-serif;
+        text-transform: uppercase;
+        transition: all 0.3s ease;
+    }
+
+        #btnPrev:hover,
+        #btnNext:hover {
+            color: #28283b;
+            font-weight: bold;
+        }
+        /*end*/
     </style>
 <h1 class="underline">
     @ViewData["name"]
@@ -52,15 +155,19 @@ input[type="radio"] {
 
 <div class="mcontainer">
     <div class="block" style="background-color: #add8e6;">
-        <div id="calendar"></div>
-
+       @* <div id="calendar"></div>*@
+        <div class="calendar-wrapper">
+            <button id="btnPrev" type="button">Предыдущий</button>
+            <button id="btnNext" type="button">Следующий</button>
+            <div id="divCal"></div>
+        </div>
     </div>
     <div class="block" style="background-color: #90ee90;">
 
         <form id="noteForm" method="post" action="@Url.Action("AccountMechanic")">
                 <input type="hidden" name="requestId" id="requestId">
             <input type="hidden" name="dateChoicen" id="dateChoicen">
-                <div class="radio-group">
+            <div class="radio-group" id="repairRequestsContainer">
                 @foreach (var request in Model)
                 {
                     <label>
@@ -79,25 +186,7 @@ input[type="radio"] {
                     <br>
                     <button onclick="saveNote()">Сохранить</button>
                 </div>
-                        @* <h2>Выберите один из вариантов:</h2>
-        <div class="radio-group">
-            <label>
-                <input type="radio" name="option" value="option1" onclick="showNoteField()">
-                КТМ
-            </label>
-        </div>
-        <div class="radio-group">
-            <label>
-                <input type="radio" name="option" value="option2" onclick="showNoteField()">
-                Kawasaki
-            </label>
-        </div>
-        <div class="radio-group">
-            <label>
-                <input type="radio" name="option" value="option3" onclick="showNoteField()">
-                Вариант 3
-            </label>
-        </div>*@
+                       
     </form>
  
     </div>
