Вывела заметки у механика в аккаунте

--- a/Diplom_popitka1/Views/Mechanic/_RepairRequestsList.cshtml
+++ b/Diplom_popitka1/Views/Mechanic/_RepairRequestsList.cshtml
@@ -31,7 +31,7 @@
     }
     <div id="noteField" class="note-field" style="display: none;">
         <h3>Заметки</h3>
-
+        <div id="notesInThisRequest"></div>
         <br>
         <textarea id="noteInput" name="noteInput" placeholder="Введите вашу заметку здесь..." rows="4" cols="50"></textarea>
         <br>
