--- a/Diplom_popitka1/Views/Mechanic/AccountMechanic.cshtml
+++ b/Diplom_popitka1/Views/Mechanic/AccountMechanic.cshtml
@@ -44,18 +44,6 @@ input[type="radio"] {
         margin: 20px;
     }
 
-    /*для календаря*/
-    /*.group:after {
-        content: "";
-        display: table;
-        clear: both;
-    }*/
-
-   /* imgAccMech {
-        max-width: 100%;
-        height: auto;
-        vertical-align: baseline;
-    }*/
 
     a {
         text-decoration: none;
@@ -165,37 +153,10 @@ input[type="radio"] {
         </div>
     </div>
     <div class="block" style="background-color: #90ee90;">
-        
-       @* <form id="noteForm" method="post" action="@Url.Action("AccountMechanic")">*@
                 <input type="hidden" name="requestId" id="requestId">
             <div id="selectedDateDisplay"></div>
-            <div class="radio-group" id="repairRequestsContainer">
-                
-               @* @if (Model != null && Model.Any())
-                {
-                  @foreach (var request in Model)
-                  {
-                    <label>
-                        <input type="radio" name="option" value="@request.IdRequest" onclick="showNoteField(@request.IdRequest)">
-                        @request.ModelMotoCl
-                    </label>
-                  }
-                }
-                else
-                {
-                <p>Нет записей</p>
-                }*@
-            </div>
-                @*<div id="noteField" class="note-field" style="display: none;">
-                    <h3>Заметки</h3>
-                   
-                    <br>
-                    <textarea id="noteInput" placeholder="Введите вашу заметку здесь..." rows="4" cols="50"></textarea>
-                    <br>
-                    <button onclick="saveNote()">Сохранить</button>
-                </div>*@
-                       
-  @*  </form>*@
+            <div class="radio-group" id="repairRequestsContainer"></div>
+               
  
     </div>
 </div>
